<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hourglass</string>
    <!-- SettingsActivity Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- activity_splash_screen    -->
    <string name="splashScreen_titleSub1">Hour</string>
    <string name="splashScreen_titlesub2">glass</string>

    <!--    activity_main.xml-->
    <string name="startButton">START</string>
    <string name="setTimeButton">SET TIME</string>
    <string name="playersButton">PLAYERS</string>
    <string name="settingsHomeButton">SETTINGS</string>
    <string name="quitButton">QUIT</string>

    <!--    activity_settings.xml-->
    <string name="settingsTextLanguage">Language</string>
    <string name="settingsTextTheme">Theme</string>
    <string name="manualHomeButton">Manual</string>
    <string name="settingsTextSFX">SFX</string>
    <string name="settingsTextMusic">Music</string>
    <string name="settingsTextAbout">About</string>
    <string name="settingsButtonBack">Back</string>
    <string name="aboutDialogTitle">Application Info</string>
    <string name="aboutDialogMessage">
        Hourglass developed by android developer Nikolas Sarakenidis\n
        The application runs only on Android smartphones\n
        Minimum SDK: 24\n
        Version: 1.01
    </string>

    <string name="textEnglishLanguage">English (Default)</string>
    <string name="textGreekLanguage">Greek</string>

    <!--    set_time_customdialog.xml-->
    <string name="languageDialog">Choose Language</string>
    <string name="english_language_selected">Language has changed to English</string>
    <string name="greek_language_selected">Language has changed to Greek</string>
    <string name="setTimeTitle">Set your desired time</string>
    <string name="withPauseText">With Pause:</string>
    <string name="minutesTxt">minutes</string>
    <string name="secondsTxt">seconds</string>
    <string name="doneButton">DONE</string>

    <!--    setnofplayers_customdialog.xml-->
    <string name="playersTxt">players</string>
    <string name="hint_player1Name" tools:ignore="Typos">Player1 Name</string>
    <string name="hint_player2Name">Player2 Name</string>
    <string name="setnofplayersTitle">Set Number Of Players</string>

    <!--    language_item.xml-->
    <string name="image_description_flag">A flag that refines visualy the text on the left</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notificationTitleRunning">CountDown Timer is running</string>
    <string name="notificationTitleStop">CountDown Timer stopped</string>
    <string name="notificationTitleFinish">CountDown Timer finished!</string>

    <!-- fragment_two_players_with_pause -->
    <string name="player1NameTxt">Player 1</string>
    <string name="player2NameTxt">Player 2</string>
    <string name="player1TimeFinished">Time finished for</string>
    <string name="player2TimeFinished">Time finished for</string>
    <string name="radioButton1">1</string>
    <string name="radioButton2">2</string>
    <string name="radioButton3">3</string>

    <!--    Theme Activity-->
    <string name="themeHomeButton">TΗΕΜΕ</string>

    <!--    Manual-->
    <!--    General-->
    <string name="generalManual_title_txt">General</string>
    <string name="generalManual_body1_txt">\tHourglass is an application developed with the purpose of using a timer either for one user (one timer) or for two (two timers).</string>
    <string name="generalManual_body2_txt">\tHistorically hourglass was a tool that is used for measuring the time. It\'s consisted by 2 glass containers that are vertically aligned in order to make the material that\'s inside it to penetrate and across from top to the bottom side. Today we are using the evolved hourglass to measure the time that is passed from a specific time, thanks to techonology.</string>
    <string name="generalManual_body3_txt">\tThis application has a meaningful matter as it cannot only show a reversed timer for a user but also can make two reversed timers for two users. But lest\'s take the things in order.</string>
    <string name="generalManual_body4_txt">\tAt first, in the main menu are two buttons which the mode of hourglass is depended by. The \'set time\' button is used to set the minutes and seconds of timer. Also there is a box that if it\'s clicked the timer will contain the pause option. Lastly there are three buttons, each of them stores the time of your own preference, for future use. The \'players\' button is used to set the number of users or, if you\'d like, the number of timers. In the case the picked users are two, you can apply the name of each one to separate which timer is whom.</string>
    <string name="generalManual_body5_txt">\tSo, there are four types of displayed timers, which are: 1 player with pause (1PWP), 1 player no pause (1PNP), 2 players with pause (2PWP), 2 players no pause (2PNP). By hitting the \'start\' button of the main menu, the corresponding timer/s is/are displayed according to your given picks.</string>
    <string name="generalManual_body6_txt">\tFinally, there is the settings button, that\'s described in the settings manual section.</string>

    <!--    1PWP-->
    <string name="opwpManual_title_txt">One Player With Pause</string>
    <string name="opwpManual_body1_txt">\tIn this mode user can use the timer with the privilege of pause and stop. User can stop the timer whenever he wants. By the start of timer a notification is running. When the timer ends, a notification will appear.</string>
    <!--    <string name="opwpManual_body2_txt">\tAlso user is able to increase the time of timer by 5, 10 or 15 seconds, if it's needed. Time cannot overpass the initial time.</string>-->

    <!--    1PNP-->
    <string name="opnpManual_title_txt">One Player No Pause</string>
    <string name="opnpManual_body1_txt">\tIn this mode, in contrary of 1PWP, user can only start and restart the timer. By the time the timer starts he is not allowed to pause it. If the timer ends then a notification will appear.</string>
    <!--    <string name="tpwpManual_body2_txt">\tAlso user is able to increase the time of timer by 5, 10 or 15 seconds, if it's needed. Time cannot overpass the initial time.</string>-->

    <!--    2PWP-->
    <string name="tpwpManual_title_txt">Two Players With Pause</string>
    <string name="tpwpManual_body1_txt">\tHere the number of users is 2. Each user can start the timer and if his/her turn ends, he/she can change the turn by the corresponding button. Each user can use the pause button only if it\'s his turn and the timer is running. The last user who\'s timer has not run out of time is the winner. Notification doesn\'t appear.</string>

    <!--    2PNP-->
    <string name="tpnpManual_title_txt">Two Players No Pause </string>
    <string name="tpnpManual_body1_txt">\tIn this mode, in contrary of 2PWP, users can only start and restart the timer. By the time the timer starts users aren\'t allowed to pause it.</string>

    <!--    Settings-->
    <string name="settingsManual_title_txt">Settings</string>
    <string name="settingsManual_body1_txt">\tThere are five buttons in settings layout. The application supports two languages so far, english and greek. Each language can be chose by the language button.</string>
    <string name="settingsManual_body2_txt">\tHourglass also supports two theme modes, light and dark. User can choose between three options, either light mode or dark mode or user\'s system theme. If user\'s theme is light, then light mode will be displayed and so on. By default system\'s theme is selected.\n
        \tAdditionally, in the same screen, user can set the image he/she wants to display in the game\'s screen background. User can choose only one game\'s theme at a time. Every time app\'s theme changes, the background game image return to default pick. Some images are prohibited to be used only in light mode, some others only in dark and some in both modes.</string>
    <!--    <string name="settingsManual_body3_txt">SFX</string>-->
    <!--    <string name="settingsManual_body4_txt">MUSIC</string>-->
    <string name="settingsManual_body5_txt">\tThe About button represents the application information.</string>
    <!--    -->
    <!--    -->
</resources>