<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setTimeConstraintLayout"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/setTimeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setTimeTitle"
            android:textColor="?android:attr/colorForeground"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layoutDialog" />

        <RelativeLayout
            android:id="@+id/layoutRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_setTime_minutes"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minutesTxt" />

            <TextView
                android:id="@+id/textview_setTime_seconds"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/textview_setTime_minutes"
                android:gravity="center"
                android:text="@string/secondsTxt" />

            <NumberPicker
                android:id="@+id/numberPicker_setTime_minutespicker"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:background="?attr/colorPrimary"
                android:solidColor="?attr/colorPrimaryVariant" />

            <NumberPicker
                android:id="@+id/numberPicker_setTime_secondspicker"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/numberPicker_setTime_minutespicker"
                android:background="?attr/colorPrimary"
                android:solidColor="?attr/colorPrimaryVariant" />

            <RadioGroup
                android:id="@+id/radioGroup_setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/numberPicker_setTime_secondspicker"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radiobutton_setTime_customSet1"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:checked="true"
                    android:text="@string/radioButton1"
                    android:textColor="?android:attr/colorForeground" />

                <RadioButton
                    android:id="@+id/radiobutton_setTime_customSet2"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/radioButton2"
                    android:textColor="?android:attr/colorForeground" />

                <RadioButton
                    android:id="@+id/radiobutton_setTime_customSet3"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/radioButton3"
                    android:textColor="?android:attr/colorForeground" />
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_setTime_withPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-60dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/withPauseText"
            android:textColor="?android:attr/colorForeground"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRelative" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox_setTime_withpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toEndOf="@+id/textView_setTime_withPause"
            app:layout_constraintTop_toBottomOf="@id/layoutRelative" />

        <Button
            android:id="@+id/button_setTime_doneDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorContainer"
            android:text="@string/doneButton"
            android:textColor="?attr/colorOnContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_setTime_withPause" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
