<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_sixth"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hourglass_title"></ImageView>


    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="44dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImageView"
        app:srcCompat="@drawable/hourglass_icon"></ImageView>


    <Button
        android:id="@+id/start_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/primary_fifth"
        android:onClick="onClick"
        android:text="@string/startButton"
        android:textColor="@color/textcolor_first_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView"></Button>


    <Button
        android:id="@+id/setTime_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_fifth"
        android:onClick="onClick"
        android:text="@string/setTimeButton"
        android:textColor="@color/textcolor_first_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"></Button>

    <Button
        android:id="@+id/players_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_fifth"
        android:onClick="onClick"
        android:text="@string/playersButton"
        android:textColor="@color/textcolor_first_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTime_button"></Button>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_fifth"
        android:onClick="onClick"
        android:text="@string/settingsButton"
        android:textColor="@color/textcolor_first_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players_button" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_fifth"
        android:text="@string/quitButton"
        android:textColor="@color/textcolor_first_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>