<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setnofplayersConstraintLayout"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSetPlayersDialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textview_setnofplayers_playersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setnofplayersTitle"
            android:textColor="?android:attr/colorForeground"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layoutSetPlayersDialog" />

        <RelativeLayout
            android:id="@+id/layoutRelativeSetPlayersDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_setnofplayers_players"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/playersTxt"
                android:textColor="?android:attr/colorForeground" />

            <NumberPicker
                android:id="@+id/numberPicker_setnofplayers_playersPicker"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:solidColor="?attr/colorPrimaryVariant" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_setnofplayers_player1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="?attr/colorOnSecondary"
            android:textCursorDrawable="@null"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRelativeSetPlayersDialog">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_setnofplayers_player1Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondary"
                android:hint="@string/hint_player1Name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textColor="?android:attr/colorForeground"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_setnofplayers_player2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="?attr/colorOnSecondary"
            android:textCursorDrawable="@null"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_setnofplayers_player1Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_setnofplayers_player2Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_player2Name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:backgroundTint="?attr/colorSecondary"
                android:textColor="?android:attr/colorForeground"
                android:textColorHint="?android:attr/colorForeground"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_setnofplayers_doneDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="82dp"
            android:backgroundTint="?attr/colorContainer"
            android:text="@string/doneButton"
            android:textColor="?attr/colorOnContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_setnofplayers_player1Name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
