<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".settings.manual.SettingsManualFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--            android:id="@+id/settingsManual_motionLayout"-->
            <!--            app:layoutDescription="@xml/fragment_settings_manual_xml_motionlayout_scene"-->


            <TextView
                android:id="@+id/header_settingsManual_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/settingsManual_title_txt"
                android:textAppearance="@style/txt_header_manual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/body1_settingsManual_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/settingsManual_body1_txt"
                android:textAppearance="@style/txt_body_manual"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_settingsManual_txt" />


            <TextView
                android:id="@+id/body5_settingsManual_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/settingsManual_body5_txt"
                android:textAppearance="@style/txt_body_manual"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body1_settingsManual_txt" />

            <!--            <TextView-->
            <!--                android:id="@+id/body6_settingsManual_txt"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="2dp"-->
            <!--                android:layout_marginEnd="8dp"-->
            <!--                android:text="@string/settingsManual_body6_txt"-->
            <!--                android:textAppearance="@style/txt_body_manual"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/body5_settingsManual_txt" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>